--- a/app/particials/product-card.html
+++ b/app/particials/product-card.html
@@ -2,21 +2,21 @@
   <header class="product-card__row product-header">
     <div class="product-card__left-col product-header__spacer"></div>
     <div class="product-card__right-col product-header__title">
-      <h1>3 Stripes Pollo (black)</h1>
+      <h1 class="js-product-title"></h1>
     </div>
   </header>
 
   <div class="product-card__row">
     <div class="product-card__left-col product-image">
-      <img class="product-image__image" src="https://github.com/amerezhany/astound-test-task/blob/master/3-stripes-black.jpg?raw=true" alt="3 Stripes Pollo (black)">
+      <img class="product-image__image js-product-image" src="" alt="">
     </div>
 
     <div class="product-card__right-col details">
-      <div class="details__info">Item #: 701642853695</div>
+      <div class="details__info">Item #: <span class="js-product-sku"></span></div>
 
       <div class="details__price price">
-        <strong class="price__value price__value--old">$29.50</strong>
-        <strong class="price__value">$19.99</strong>
+        <strong class="price__value price__value--old js-product-old-price"></strong>
+        <strong class="price__value js-product-price"></strong>
       </div>
 
       <div class="details__bar">
@@ -64,9 +64,7 @@
 
       <div class="details__description description">
         <h4 class="description__title">Details:</h4>
-        <p>Under the bed kitty poochy hopped up on catnip paw at your fat belly walk on car leaving trail of paw prints
-          on hood and windshield. Lick the plastic bag scratch the box so hide from vacuum cleaner so caticus cuteicus
-          yet scream for no reason at 4 am.</p>
+        <p class="js-product-description"></p>
       </div>
 
       <div class="details__form-cart form-cart">
